--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body >
-<div id="maina" class="leftrightmarging " style="background:white;display: grid;grid-template-rows: auto;grid-template-columns: auto;">
+<div id="maina" class="leftrightmarging griddisplay" style="background:white;grid-template-rows: auto;grid-template-columns: auto auto auto;">
+    <div></div>
     <div>
-        <div id="gridcontain" class="autowidthfull"  style="display: grid;grid-template-columns: 30% calc(70% - 20px);grid-template-rows: 40px 120px minmax(calc(100% - 40px - 120px -  15% - 3*20px - 50px),auto) auto;grid-row-gap: 20px;grid-column-gap: 20px;">
+        <div id="gridcontain" class="autowidthfull griddisplay"  style="grid-template-columns: 30% calc(70% - 20px);grid-template-rows: 40px 120px minmax(calc(100% - 40px - 120px -  15% - 3*20px - 50px),auto) auto;grid-row-gap: 20px;grid-column-gap: 20px;">
             <!--续费-->
             <div style="grid-column:1/3;align-self:end">
                 <div class="white rad curpoint"  style="display: inline;background: #FF6100;" @click="showTest">服务剩余10天&nbsp&nbsp|&nbsp&nbsp续费</div>
             </div>
             <!--个人信息-->
-            <div class="whiteborderblock" style="display: grid;grid-template-columns: 100px auto auto;grid-template-rows: 50% 50%;padding: 10px">
+            <div class="whiteborderblock griddisplay" style="grid-template-columns: 100px auto auto;grid-template-rows: 50% 50%;padding: 10px">
                 <img src="img/head.jpg" width="100px" height="100px" style="grid-row: 1/3;border-radius: 4px" class="curpoint" @click="showTest()">
                 <div class="box fafafa" style="align-self: center;margin-left:8px;margin-right:8px;font-size: 20px; " >王大力</div>
                 <div style="align-self: center;font-size: 16px;color: #9B9B9B;margin-left: 8px">调度</div>
@@ -25,19 +26,19 @@
                 <div></div>
             </div>
             <!--日月统计-->
-            <div class="whiteborderblock" style="display: grid;grid-template-columns: 1fr auto 1fr;grid-template-rows: 1fr">
-                <div style="display: grid;grid-template-rows: 1fr 1fr;grid-template-columns: 1fr 1fr;justify-self: start">
+            <div class="whiteborderblock griddisplay" style="grid-template-columns: 1fr auto 1fr;grid-template-rows: 1fr">
+                <div class="griddisplay" style="grid-template-rows: 1fr 1fr;grid-template-columns: 1fr 1fr;justify-self: start">
                     <div style="grid-column: 1/3;color: #4A4A4A;font-size: 20px;align-self: center;margin-left: 20px">日报表统计时段</div>
-                    <div style="align-self: center;margin-left: 20px;border-radius: 4px;border: #9B9B9B 1px solid;padding: 4px 4px;display: grid;grid-template-columns: 1fr 1fr">
+                    <div class="griddisplay" style="align-self: center;margin-left: 20px;border-radius: 4px;border: #9B9B9B 1px solid;padding: 4px 4px;grid-template-columns: 1fr 1fr">
                         <div class="curpoint" style="font-size: 14px;color: #9B9B9B;display: inline-block;justify-self: center">开始时间</div>
                         <div style="font-size: 14px;color: #4A4A4A;display: inline-block;margin-left: 8px;justify-self: center">00:00</div>
                     </div>
                     <div style="font-size: 14px;color: #4A4A4A;display: inline-block;align-self: center;margin-left: 16px">至次日00:00</div>
                 </div>
                 <div style="height: 80%;background: #D8D8D8;width: 1px;align-self: center"></div>
-                <div style="display: grid;grid-template-rows: 1fr 1fr;grid-template-columns: 1fr 1fr;justify-self: start">
-                    <div style="grid-column: 1/3;color: #4A4A4A;font-size: 20px;align-self: center;margin-left: 20px">月报表统计时段</div>
-                    <div style="align-self: center;margin-left: 20px;border-radius: 4px;border: #9B9B9B 1px solid;padding: 4px 4px;display: grid;grid-template-columns: 1fr 1fr">
+                <div class="griddisplay" style="grid-template-rows: 1fr 1fr;grid-template-columns: 1fr 1fr;justify-self: start">
+                    <div class="griddisplay" style="grid-column: 1/3;color: #4A4A4A;font-size: 20px;align-self: center;margin-left: 20px">月报表统计时段</div>
+                    <div style="align-self: center;margin-left: 20px;border-radius: 4px;border: #9B9B9B 1px solid;padding: 4px 4px;grid-template-columns: 1fr 1fr">
                         <div class="curpoint" style="font-size: 14px;color: #9B9B9B;display: inline-block;justify-self: center">开始时间</div>
                         <div style="font-size: 14px;color: #4A4A4A;display: inline-block;margin-left: 8px;justify-self: center">1号</div>
                     </div>
@@ -48,7 +49,7 @@
             <div style="position: relative;" class="whiteborderblock">
                 <div style="position: absolute;width: 100px;height: 100%;background-image: linear-gradient(#6D68EF,#123387);border-bottom-left-radius: 4px;border-top-left-radius: 4px">
                 </div>
-                <div  style="position:absolute;height:100%;width:100%;display: grid;grid-template-columns: 100px auto;grid-template-rows: 2fr 1fr 1fr 1.5fr 1fr 1fr 1fr" >
+                <div class="griddisplay" style="position:absolute;height:100%;width:100%;grid-template-columns: 100px auto;grid-template-rows: 2fr 1fr 1fr 1.5fr 1fr 1fr 1fr" >
                     <div class="white fafafa" style="margin-top: 20px;font-size: 16px"><div style="text-align: center">单位名称:</div></div>
                     <div class="marleft20" style="margin-top: 20px;">上海建工材料工程长桥搅拌站多媒体产业园展示规划设计有限公司</div>
                     <div class="white fafafa" style="font-size: 16px"><div style="text-align: center">单位编号:</div></div>
@@ -66,7 +67,7 @@
                 </div>
             </div>
             <!--地图信息-->
-            <div class="whiteborderblock" style="display: grid;grid-template-rows: 50px auto 30px;padding: 12px 12px 0px 12px">
+            <div class="whiteborderblock griddisplay" style="grid-template-rows: 50px auto 30px;padding: 12px 12px 0px 12px">
                 <div class="nbnbnb" style="align-self: center">单位地址:&nbsp&nbsp
                     <div style="display: inline-block;border-radius: 4px;padding-left: 12px;padding-right: 12px" class="box fafafa">上海市杨浦区国正中心-售楼处</div>
                     &nbsp&nbsp<div style="display: inline-block" class="nbnbnb">厂区半径:</div>&nbsp&nbsp
@@ -80,7 +81,7 @@
                 <div style="align-self: center" class="fafafa">经纬度:<span style="font-size: 12px;color: #9B9B9B">14.45199846515616,15.1984961465</span><div style="font-size: 14px;color: #698BE5;float: right;margin-right: 10px">提示 : 点击地图调整单位地址</div></div>
             </div>
             <!--拌台信息 排队信息-->
-            <div class="whiteborderblock" style="grid-column: 1/3;display: grid;grid-template-columns:30% calc(70% - 20px);padding: 10px 10px;margin-bottom: 10px ">
+            <div class="whiteborderblock griddisplay" style="grid-column: 1/3;grid-template-columns:30% calc(70% - 20px);padding: 10px 10px;margin-bottom: 10px ">
                 <div class="marleft20">
                     <div style="font-size: 20px" class="fafafa">拌台设置</div>
                     <div style="margin-top: 10px">
@@ -98,6 +99,7 @@
             </div>
         </div>
     </div>
+    <div></div>
 </div>
 <script src="js/index.js"></script>
 </body>
